# vn-address-intelligence

./: .env.example  .env.test  .gitignore  APM-CONNECTIVITY-CHECK.md  APM-LOGGING-TEST-RESULTS.md  APM-MIGRATION-COMPLETE-SUMMARY.md  APM-MIGRATION-FINAL-REPORT.md  APM-MIGRATION-SUMMARY.md  APM-SETUP-GUIDE.md  BUILD_README.md  CLEANUP-COMPLETION-REPORT.md  CLEANUP-SUMMARY.md  CODEBASE_CONTEXT.md  COMPLETION-REPORT.md  DEBUG-GUIDE.md  DEPLOYMENT-READY.md  DOCS_CLEANUP_SUMMARY.md  FINAL-CLEANUP-REPORT.md  FOUND-FILES-SUMMARY.md  INSTRUCTIONS.md  KIBANA-LOGGING-ENHANCED.md  KIBANA-LOGGING-TEST-RESULTS.md  MIGRATION-COMPLETE.md  MIGRATION-ELASTIC-APM-CLIENT.md  MIGRATION-LOGSTASH-TO-APM.md  OPTIMIZATION_SUMMARY.md  PARSER-DISPLAY-FIX-FINAL.md  PARSER-FIX-COMPLETE.md  PARSER-FIX-SUMMARY.md  PUBLISH_GUIDE.md  QUICK-START.md  README.md  RUN_ORDER.md  SESSION-SUMMARY-2026-05-17.md  SUPA_REFACTOR_PLAN.md  SUPA_UI_CHANGES_SUMMARY.md  SUPA_UI_FINAL_FIXES.md  SUPA_UI_IMPROVEMENTS.md  SUPA_UI_LAYOUT_FIX.md  SUPA_UI_STEP3_IMPROVEMENTS.md  (+37 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
_temp/: saas-feature-specification.md  saas-redesign-parser-tool.md
app/: main.py
assets/: abbreviation_map.json
cache/: embeddings_embeddings_mgte_7036788979502787842.pkl  optimization_report.json
colab_vnai/: ground_truth.db  noise_profiles.json  vnai_ablation_study.ipynb
data/: ner_samples_20260426_131933_1000_config.xml  ner_samples_prelabeled.json  training_data.jsonl
docs/: COLAB-INTEGRATION-GUIDE.md  GROUND_TRUTH_MIGRATION.md  INDEX.md  NER-implement-planning.md  (+15 more)
(+564 files in other folders)
