[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vn-address-intelligence"
version = "0.0.0"
description = "Vietnam administrative address normalization, enrichment, and AI tooling"
readme = "README.md"
requires-python = ">=3.11,<3.14"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
